Implement base element and API for customizing RLib Logger (#72)